--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,16 @@
   justify-content: center;
   box-sizing: border-box;
 }
+.AppLight {
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  color: #2a6f97;
+  background-color: #f8f8ff;
+  display: flex;
+  justify-content: center;
+  box-sizing: border-box;
+}
 .Container {
   width: 90%;
   height: 100%;
