--- a/src/components/UI/Card/Card.css
+++ b/src/components/UI/Card/Card.css
@@ -1,4 +1,4 @@
-.c {
+/*.c {
   position: absolute;
   max-width: 500px;
   max-height: 500px;
@@ -12,7 +12,7 @@
 .back {
   background-size: cover;
 }
-
+/*
 .back {
   background-image: url(https://images.unsplash.com/photo-1544511916-0148ccdeb877?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1901&q=80i&auto=format&fit=crop);
 }
@@ -20,3 +20,4 @@
 .front {
   background-image: url(https://images.unsplash.com/photo-1540206395-68808572332f?ixlib=rb-1.2.1&w=1181&q=80&auto=format&fit=crop);
 }
+*/
