--- a/src/components/Tech/Tech.css
+++ b/src/components/Tech/Tech.css
@@ -44,11 +44,17 @@
   height: 180px;
 }
 .c {
+  width: 358px;
+  height: 350px;
+  position: absolute;
   display: flex;
   flex-direction: column;
   align-items: center;
   cursor: pointer;
   will-change: transform, opacity;
+}
+.front {
+  background-image: url("https://res.cloudinary.com/dxtqihvgt/image/upload/v1616200422/React-big_xqcz65.png");
 }
 
 .front,
