--- a/src/components/Tech/Tech.css
+++ b/src/components/Tech/Tech.css
@@ -10,6 +10,9 @@
 .Tech h3 {
   color: #2a6f97;
   font-size: 4rem;
+  margin-bottom: 1rem;
+}
+.Tech p {
   margin-bottom: 6rem;
 }
 .TechList {
@@ -46,7 +49,6 @@
 .c {
   width: 358px;
   height: 350px;
-  position: absolute;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -54,10 +56,30 @@
   will-change: transform, opacity;
 }
 .front {
-  background-image: url("https://res.cloudinary.com/dxtqihvgt/image/upload/v1616200422/React-big_xqcz65.png");
+  position: absolute;
 }
 
 .front,
 .back {
   background-size: cover;
+}
+
+@media (max-width: 576px) {
+  .Tech h3 {
+    color: #2a6f97;
+    font-size: 3rem;
+    margin-bottom: 6rem;
+  }
+  .TechListItem {
+    width: 300px;
+  }
+  .c {
+    width: 300px;
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    cursor: pointer;
+    will-change: transform, opacity;
+  }
 }
